@@ -123,12 +123,6 @@ __Choices: Europe/Kaliningrad, Europe/Moscow, Europe/Samara, Asia/Yekaterinburg,
 Choices-en.UTF-8: Moscow-01 - Kaliningrad, Moscow+00 - west Russia, Moscow+01 - Caspian Sea, Moscow+02 - Urals, Moscow+03 - west Siberia, Moscow+03 - Novosibirsk, Moscow+04 - Yenisei River, Moscow+05 - Lake Baikal, Moscow+06 - Lena River, Moscow+07 - Amur River, Moscow+07 - Sakhalin Island, Moscow+08 - Magadan, Moscow+09 - Kamchatka, Moscow+10 - Bering Sea
 _Description: Select your time zone:
 
-Template: tzsetup/country/SJ
-Type: select
-__Choices: Arctic/Longyearbyen, Atlantic/Jan_Mayen
-Choices-en.UTF-8: Longyearbyen (Svalbard), Jan Mayen
-_Description: Select your time zone:
-
 Template: tzsetup/country/UA
 Type: select
 __Choices: Europe/Kiev, Europe/Uzhgorod, Europe/Zaporozhye, Europe/Simferopol
